--- a/book/404.html
+++ b/book/404.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - Hush Line Field Manual</title>
+        <title>Page not found - Pi Relay Field Manual</title>
         <base href="/">
 
 
@@ -140,7 +140,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Hush Line Field Manual</h1>
+                    <h1 class="menu-title">Pi Relay Field Manual</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
