--- a/book/installation/relay-types.html
+++ b/book/installation/relay-types.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Types of Relays - Hush Line Field Manual</title>
+        <title>Types of Relays - Pi Relay Field Manual</title>
 
 
         <!-- Custom HTML head -->
@@ -139,7 +139,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Hush Line Field Manual</h1>
+                    <h1 class="menu-title">Pi Relay Field Manual</h1>
 
                     <div class="right-buttons">
                         <a href="../print.html" title="Print this book" aria-label="Print this book">
