--- a/book/print.html
+++ b/book/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Hush Line Field Manual</title>
+        <title>Pi Relay Field Manual</title>
         <meta name="robots" content="noindex" />
 
 
@@ -140,7 +140,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Hush Line Field Manual</h1>
+                    <h1 class="menu-title">Pi Relay Field Manual</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
