--- a/book/prereqs/index.html
+++ b/book/prereqs/index.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../prereqs/index.html" class="active"><strong aria-hidden="true">2.</strong> Prerequisites</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../prereqs/general.html"><strong aria-hidden="true">2.1.</strong> General</a></li><li class="chapter-item expanded "><a href="../prereqs/raspberrypi.html"><strong aria-hidden="true">2.2.</strong> Raspberry Pi</a></li></ol></li><li class="chapter-item expanded "><a href="../installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../installation/relay-types.html"><strong aria-hidden="true">3.1.</strong> Types of Relays</a></li><li class="chapter-item expanded "><a href="../installation/installing.html"><strong aria-hidden="true">3.2.</strong> Configuring Your Relay</a></li></ol></li><li class="chapter-item expanded "><a href="../usage/index.html"><strong aria-hidden="true">4.</strong> Using Pi Relay</a></li><li class="chapter-item expanded "><a href="../features/index.html"><strong aria-hidden="true">5.</strong> Features</a></li><li class="chapter-item expanded "><a href="../resources/index.html"><strong aria-hidden="true">6.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">7.</strong> Glossary</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../prereqs/index.html" class="active"><strong aria-hidden="true">2.</strong> Prerequisites</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../prereqs/raspberrypi.html"><strong aria-hidden="true">2.1.</strong> Raspberry Pi</a></li></ol></li><li class="chapter-item expanded "><a href="../installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../installation/relay-types.html"><strong aria-hidden="true">3.1.</strong> Types of Relays</a></li><li class="chapter-item expanded "><a href="../installation/installing.html"><strong aria-hidden="true">3.2.</strong> Configuring Your Relay</a></li></ol></li><li class="chapter-item expanded "><a href="../usage/index.html"><strong aria-hidden="true">4.</strong> Using Pi Relay</a></li><li class="chapter-item expanded "><a href="../features/index.html"><strong aria-hidden="true">5.</strong> Features</a></li><li class="chapter-item expanded "><a href="../resources/index.html"><strong aria-hidden="true">6.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">7.</strong> Glossary</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -171,23 +171,12 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="hush-line-prerequisites"><a class="header" href="#hush-line-prerequisites">Hush Line Prerequisites</a></h1>
-<p>In this section we'll get everything ready before installing Hush Line.</p>
-<h2 id="general"><a class="header" href="#general">General</a></h2>
-<ul>
-<li>Download Tor Browser</li>
-<li>Create a Gmail account</li>
-<li>Create PGP keys using Mailvelope</li>
-</ul>
+                        <h1 id="pi-relay-prerequisites"><a class="header" href="#pi-relay-prerequisites">Pi Relay Prerequisites</a></h1>
+<p>In this section we'll get everything ready before installing Pi Relay.</p>
 <h2 id="raspberry-pi"><a class="header" href="#raspberry-pi">Raspberry Pi</a></h2>
 <ul>
 <li>Download the Raspberry Pi Imager</li>
 <li>Flash a microSD card with Raspberry Pi OS (64-bit)</li>
-</ul>
-<h2 id="vps"><a class="header" href="#vps">VPS</a></h2>
-<ul>
-<li>Create a Digital Ocean account</li>
-<li>Create a new server</li>
 </ul>
 
                     </main>
@@ -198,7 +187,7 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../prereqs/general.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../prereqs/raspberrypi.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -212,7 +201,7 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../prereqs/general.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../prereqs/raspberrypi.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
