--- a/book/print.html
+++ b/book/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="prereqs/index.html"><strong aria-hidden="true">2.</strong> Prerequisites</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="prereqs/general.html"><strong aria-hidden="true">2.1.</strong> General</a></li><li class="chapter-item expanded "><a href="prereqs/raspberrypi.html"><strong aria-hidden="true">2.2.</strong> Raspberry Pi</a></li></ol></li><li class="chapter-item expanded "><a href="installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="installation/relay-types.html"><strong aria-hidden="true">3.1.</strong> Types of Relays</a></li><li class="chapter-item expanded "><a href="installation/installing.html"><strong aria-hidden="true">3.2.</strong> Configuring Your Relay</a></li></ol></li><li class="chapter-item expanded "><a href="usage/index.html"><strong aria-hidden="true">4.</strong> Using Pi Relay</a></li><li class="chapter-item expanded "><a href="features/index.html"><strong aria-hidden="true">5.</strong> Features</a></li><li class="chapter-item expanded "><a href="resources/index.html"><strong aria-hidden="true">6.</strong> Resources</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">7.</strong> Glossary</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="prereqs/index.html"><strong aria-hidden="true">2.</strong> Prerequisites</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="prereqs/raspberrypi.html"><strong aria-hidden="true">2.1.</strong> Raspberry Pi</a></li></ol></li><li class="chapter-item expanded "><a href="installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="installation/relay-types.html"><strong aria-hidden="true">3.1.</strong> Types of Relays</a></li><li class="chapter-item expanded "><a href="installation/installing.html"><strong aria-hidden="true">3.2.</strong> Configuring Your Relay</a></li></ol></li><li class="chapter-item expanded "><a href="usage/index.html"><strong aria-hidden="true">4.</strong> Using Pi Relay</a></li><li class="chapter-item expanded "><a href="features/index.html"><strong aria-hidden="true">5.</strong> Features</a></li><li class="chapter-item expanded "><a href="resources/index.html"><strong aria-hidden="true">6.</strong> Resources</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">7.</strong> Glossary</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -174,25 +174,13 @@
                     <main>
                         <h1 id="pi-relay-field-manual"><a class="header" href="#pi-relay-field-manual">Pi Relay Field Manual</a></h1>
 <p><a href="https://pirelay.computer/">Pi Relay</a> is the easiest way to transform a Raspbery Pi into a relay powering the Tor network.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="hush-line-prerequisites"><a class="header" href="#hush-line-prerequisites">Hush Line Prerequisites</a></h1>
-<p>In this section we'll get everything ready before installing Hush Line.</p>
-<h2 id="general"><a class="header" href="#general">General</a></h2>
-<ul>
-<li>Download Tor Browser</li>
-<li>Create a Gmail account</li>
-<li>Create PGP keys using Mailvelope</li>
-</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="pi-relay-prerequisites"><a class="header" href="#pi-relay-prerequisites">Pi Relay Prerequisites</a></h1>
+<p>In this section we'll get everything ready before installing Pi Relay.</p>
 <h2 id="raspberry-pi"><a class="header" href="#raspberry-pi">Raspberry Pi</a></h2>
 <ul>
 <li>Download the Raspberry Pi Imager</li>
 <li>Flash a microSD card with Raspberry Pi OS (64-bit)</li>
 </ul>
-<h2 id="vps"><a class="header" href="#vps">VPS</a></h2>
-<ul>
-<li>Create a Digital Ocean account</li>
-<li>Create a new server</li>
-</ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="general-1"><a class="header" href="#general-1">General</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="raspberry-pi-prerequisites"><a class="header" href="#raspberry-pi-prerequisites">Raspberry Pi Prerequisites</a></h1>
 <h2 id="hardware"><a class="header" href="#hardware">Hardware</a></h2>
 <ul>
