--- a/book/index.html
+++ b/book/index.html
@@ -173,7 +173,7 @@
                     <main>
                         <h1 id="pi-relay-field-manual"><a class="header" href="#pi-relay-field-manual">Pi Relay Field Manual</a></h1>
 <p><a href="https://pirelay.computer/">Pi Relay</a> is the easiest way to transform a Raspbery Pi into a relay powering the Tor network.</p>
-
+<img class="width" src="../img/cover.png">
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
