--- a/book/print.html
+++ b/book/print.html
@@ -174,7 +174,7 @@
                     <main>
                         <h1 id="pi-relay-field-manual"><a class="header" href="#pi-relay-field-manual">Pi Relay Field Manual</a></h1>
 <p><a href="https://pirelay.computer/">Pi Relay</a> is the easiest way to transform a Raspbery Pi into a relay powering the Tor network.</p>
-<img class="width" src="../img/cover.png"><div style="break-before: page; page-break-before: always;"></div><h1 id="pi-relay-prerequisites"><a class="header" href="#pi-relay-prerequisites">Pi Relay Prerequisites</a></h1>
+<img class="width" src="./img/cover.png"><div style="break-before: page; page-break-before: always;"></div><h1 id="pi-relay-prerequisites"><a class="header" href="#pi-relay-prerequisites">Pi Relay Prerequisites</a></h1>
 <p>In this section we'll get everything ready before installing Pi Relay.</p>
 <h2 id="raspberry-pi"><a class="header" href="#raspberry-pi">Raspberry Pi</a></h2>
 <ul>
