update installer instructions

--- a/book/prereqs/raspberrypi.html
+++ b/book/prereqs/raspberrypi.html
@@ -193,9 +193,9 @@
 <img src="../img/19-rpi-imager.png">
 <p>Before clicking Write, click on the Settings gear in the bottom right of the window. Configure the following settings:</p>
 <ul>
-<li>Hostname = hushline</li>
+<li>Hostname = <code>pirelay</code></li>
 <li>Enable SSH with password authentication</li>
-<li>User = hush</li>
+<li>User = <code>operator</code></li>
 <li>Set a strong password</li>
 <li>Add wifi settings</li>
 </ul>
@@ -206,7 +206,7 @@
 <p>Plug the power supply into the device and let it boot up.</p>
 <h3 id="4-log-in"><a class="header" href="#4-log-in">4. Log In</a></h3>
 <p>On a Mac, open Spotlight search by pressing CMD + Space. Enter &quot;Terminal&quot; and select the application with the same name. </p>
-<p>Enter <code>ssh hush@hushline.local</code>, and when prompted, enter the password you created in the second step.</p>
+<p>Enter <code>ssh operator@pirelay.local</code>, and when prompted, enter the password you created in the second step.</p>
 <img src="../img/21-terminal-login.png">
 <h3 id="5-update-your-system"><a class="header" href="#5-update-your-system">5. Update your system</a></h3>
 <p>The last thing we need to do is to update our system. First, we'll give ourselves admin priviledges, then perform the update:</p>
